# vsomeip

./: CMakeLists.txt
LOCAL/: notify-local_1.json  subscribe_client_local_1.json
config/: mvsomeip-udp-client.json  mvsomeip-udp-client_3.json  mvsomeip-udp-service.json  notify-local.json  subscribe_client (copy).json  subscribe_client.json  subscribe_client_local.json  vsomeip-local.json  vsomeip-local_1.json  vsomeip.json
documentation/: multicast.txt
examples/: CMakeLists.txt  cli.cpp  cli_3.cpp  hello.cpp  readme.txt  ser.cpp  serial.cpp  serialprt.hpp
examples/Old/: notify-sample.cpp  subscribe-sample.cpp
examples/Old/bckup/: notify-sample.cpp  subscribe-sample.cpp
examples/hello_world/: helloworld-local_client.json
examples/offered_services_info_test/: CMakeLists.txt
implementation/routing/src/: routing_manager_impl.cpp
